prd_package/objects/ROP_Award_Code__mdt.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mileages__c</fullName>
        <label>Mileages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ROP Award Code</label>
    <pluralLabel>ROP Award Code</pluralLabel>
</CustomObject>